resolved a bug where on small devices like Samsung S8 some components were going outside the screen creating a horizontal scrollbar

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -29,6 +29,7 @@
   justify-content: center;
 }
 .portfolio_container-project {
+  max-width: 100vw;
   background-color: var(--container-color);
   border-radius: 1.25rem;
   padding: 1.5rem;
